--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "express": "^4.9.8",
+    "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-csso": "^0.2.9",
+    "gulp-stylus": "^1.3.3",
     "jade": "^1.7.0",
     "winston": "^0.8.1"
   }
