--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/izolate/skeleton",
   "devDependencies": {
     "bower": "^1.3.12",
+    "browserify": "^6.1.0",
     "express": "^4.9.8",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-csso": "^0.2.9",
+    "gulp-load-plugins": "^0.7.0",
     "gulp-stylus": "^1.3.3",
+    "gulp-watch": "^1.1.0",
     "jade": "^1.7.0",
+    "require-dir": "^0.1.0",
     "winston": "^0.8.1"
   }
 }
