--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/izolate/skeleton.git"
   },
-  "author": "izolate",
+  "author": "izolate <yoshtalwar@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/izolate/skeleton/issues"
@@ -25,8 +25,11 @@
     "gulp-csso": "^0.2.9",
     "gulp-load-plugins": "^0.7.0",
     "gulp-stylus": "^1.3.3",
+    "gulp-uglify": "^1.0.2",
     "jade": "^1.7.0",
     "require-dir": "^0.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
     "winston": "^0.8.1"
   }
 }
