--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "winston": "^0.8.1"
+  },
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "mongoose": "^3.8.21"
   }
 }
