--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uglify": "^1.0.2",
     "jade": "^1.7.0",
     "require-dir": "^0.1.0",
+    "rupture": "^0.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "winston": "^0.8.1"
