--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bower": "^1.3.12",
     "browserify": "^6.1.0",
     "express": "^4.9.8",
+    "form-serialize": "^0.4.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-csso": "^0.2.9",
@@ -32,8 +33,7 @@
     "rupture": "^0.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "winston": "^0.8.1",
-    "form-serializer": "*"
+    "winston": "^0.8.1"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
