--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter skeleton for a web app",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "6to5ify": "^3.1.2",
     "bower": "^1.3.12",
     "browserify": "^6.1.0",
+    "chai": "^1.10.0",
     "express": "^4.9.8",
     "form-serialize": "^0.4.1",
     "gulp": "^3.8.8",
@@ -31,6 +32,7 @@
     "jade": "^1.7.0",
     "require-dir": "^0.1.0",
     "rupture": "^0.6.1",
+    "supertest": "^0.15.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "winston": "^0.8.1"
