--- a/package.json
+++ b/package.json
@@ -42,14 +42,13 @@
     "winston": "^0.8.1"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.11.0",
+    "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.3",
     "csurf": "^1.6.6",
     "express-session": "^1.10.2",
     "method-override": "^2.3.1",
     "mongoose": "^3.8.21",
-    "serve-favicon": "^2.2.0",
     "validator": "^3.28.0"
   }
 }
