--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bcrypt-nodejs": "*",
     "body-parser": "~1.0.0",
     "connect-flash": "*",
@@ -25,7 +26,8 @@
     "morgan": "~1.0.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "winston": "^0.9.0"
   },
   "devDependencies": {
     "6to5ify": "^3.1.2",
