--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-session": "~1.0.4",
+    "express-validator": "^2.8.0",
     "jade": "~1.3.0",
     "mongoose": "~3.8.12",
     "morgan": "~1.0.0",
+    "node-mandrill": "^1.0.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
+    "shortid": "^2.1.3",
     "static-favicon": "~1.0.0",
-    "winston": "^0.9.0"
+    "util": "^0.10.3",
+    "validator": "^3.30.0"
   },
   "devDependencies": {
     "6to5ify": "^3.1.2",
