--- a/package.json
+++ b/package.json
@@ -8,35 +8,29 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/izolate/skeleton.git"
+    "url": "https://github.com/imperodesign/skeleton.git"
   },
   "author": "izolate <yoshtalwar@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/izolate/skeleton/issues"
+    "url": "https://github.com/imperodesign/skeleton/issues"
   },
-  "homepage": "https://github.com/izolate/skeleton",
+  "homepage": "https://github.com/imperodesign/skeleton",
   "devDependencies": {
-    "6to5ify": "^3.1.2",
-    "bower": "^1.3.12",
-    "browserify": "^6.1.0",
-    "express": "^4.9.8",
-    "form-serialize": "^0.4.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-csso": "^0.2.9",
     "gulp-load-plugins": "^0.8.0",
     "gulp-stylus": "^1.3.3",
     "gulp-uglify": "^1.0.2",
-    "jade": "^1.7.0",
     "require-dir": "^0.1.0",
-    "rupture": "^0.6.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "winston": "^0.8.1"
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "mongoose": "^3.8.21"
+    "dotenv": "^1.2.0",
+    "express": "^4.13.1",
+    "jade": "^1.11.0",
+    "stylus": "^0.52.0"
   }
 }
