--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Starter skeleton for a web app",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "npm run js:dev",
+    "js:dev": "browserify app/static/js/index.js -t babelify --debug -o app/static/dist/index.js",
+    "js:prd": "browserify app/static/js/index.js -t babelify -t uglifyify -o app/static/dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -28,9 +30,22 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "babelify": "^6.1.3",
+    "browserify": "^11.0.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-csso": "^1.0.0",
+    "gulp-if": "^1.2.5",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-stylus": "^2.0.5",
+    "gulp-uglify": "^1.2.0",
     "jade": "^1.11.0",
-    "stylus": "^0.52.0"
+    "require-dir": "^0.3.0",
+    "rupture": "^0.6.1",
+    "stylus": "^0.52.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
