--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/imperodesign/skeleton",
   "dependencies": {
     "babelify": "^6.1.3",
+    "body-parser": "^1.13.3",
     "browserify": "^11.0.0",
+    "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
     "express": "^4.13.1",
     "gulp": "^3.9.0",
