--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "babelify": "^6.1.3",
     "body-parser": "^1.13.3",
     "browserify": "^11.0.0",
+    "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
     "express": "^4.13.1",
+    "express-mongo-db": "^2.0.3",
+    "express-session": "^1.12.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-csso": "^1.0.0",
